# acme-settlement-service

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.sample  .flake8  Dockerfile  README.md  pyproject.toml
backend/src/: exceptions.py  main.py  model.py  test_main.py
backend/src/acme_client/: client.py  httpx_exception_handler.py  models.py
backend/src/api/: merchant.py  settlement.py
backend/src/services/: settlement_service.py
docs/: acme_payments_api.json  acme_payments_api.yaml
frontend/: README.md
